--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -37,6 +37,7 @@ critical-section  = "1.1.1"
 embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
 embedded-graphics = "0.7.1"
 esp-backtrace     = { version = "0.6.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
+esp-hal-smartled  = { version = "0.1.0", features = ["esp32"], path = "../esp-hal-smartled" }
 esp-println       = { version = "0.3.1", features = ["esp32"] }
 sha2              = { version = "0.10.6", default-features = false}
 smart-leds        = "0.3.0"
@@ -45,22 +46,17 @@ static_cell       = "1.0.0"
 aes = "0.8.2"
 
 [features]
-default           = ["rt", "vectored", "xtal40mhz"]
-bluetooth         = []
-eh1               = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb"]
-rt                = []
-smartled          = ["esp-hal-common/smartled"]
-ufmt              = ["esp-hal-common/ufmt"]
-vectored          = ["esp-hal-common/vectored"]
-async             = ["esp-hal-common/async", "embedded-hal-async"]
-embassy           = ["esp-hal-common/embassy"]
+default            = ["rt", "vectored", "xtal40mhz"]
+bluetooth          = []
+eh1                = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb"]
+rt                 = []
+ufmt               = ["esp-hal-common/ufmt"]
+vectored           = ["esp-hal-common/vectored"]
+async              = ["esp-hal-common/async", "embedded-hal-async"]
+embassy            = ["esp-hal-common/embassy"]
 embassy-time-timg0 = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
-xtal40mhz         = ["esp-hal-common/esp32_40mhz"]
-xtal26mhz         = ["esp-hal-common/esp32_26mhz"]
-
-[[example]]
-name              = "hello_rgb"
-required-features = ["smartled"]
+xtal40mhz          = ["esp-hal-common/esp32_40mhz"]
+xtal26mhz          = ["esp-hal-common/esp32_26mhz"]
 
 [[example]]
 name              = "spi_eh1_loopback"
