--- a/esp32s3-hal/Cargo.toml
+++ b/esp32s3-hal/Cargo.toml
@@ -40,6 +40,7 @@ critical-section  = "1.1.1"
 embassy-executor  = { package = "embassy-executor", git = "https://github.com/embassy-rs/embassy/", rev = "cd9a65b", features = ["nightly", "integrated-timers"] }
 embedded-graphics = "0.7.1"
 esp-backtrace     = { version = "0.6.0", features = ["esp32s3", "panic-handler", "exception-handler", "print-uart"] }
+esp-hal-smartled  = { version = "0.1.0", features = ["esp32s3"], path = "../esp-hal-smartled" }
 esp-println       = { version = "0.3.1", features = ["esp32s3"] }
 sha2              = { version = "0.10.6", default-features = false}
 smart-leds        = "0.3.0"
@@ -54,17 +55,12 @@ default              = ["rt", "vectored"]
 direct-boot          = ["r0"]
 eh1                  = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb", "dep:embedded-can"]
 rt                   = []
-smartled             = ["esp-hal-common/smartled"]
 ufmt                 = ["esp-hal-common/ufmt"]
 vectored             = ["esp-hal-common/vectored"]
 async                = ["esp-hal-common/async", "embedded-hal-async"]
 embassy              = ["esp-hal-common/embassy"]
 embassy-time-systick = ["esp-hal-common/embassy-time-systick", "embassy-time/tick-hz-16_000_000"]
 embassy-time-timg0   = ["esp-hal-common/embassy-time-timg0", "embassy-time/tick-hz-1_000_000"]
-
-[[example]]
-name              = "hello_rgb"
-required-features = ["smartled"]
 
 [[example]]
 name              = "spi_eh1_loopback"
