--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
       # Subsequent steps can just check the examples instead, as we're already
       # confident that they link.
       - name: check esp32-hal (common features)
-        run: cd esp32-hal/ && cargo check --examples --features=eh1,smartled,ufmt
+        run: cd esp32-hal/ && cargo check --examples --features=eh1,ufmt
       - name: check esp32-hal (async)
         run: cd esp32-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-timg0
       - name: check esp32-hal (async, gpio)
@@ -107,7 +107,7 @@ jobs:
       # Subsequent steps can just check the examples instead, as we're already
       # confident that they link.
       - name: check esp32c3-hal (common features)
-        run: cd esp32c3-hal/ && cargo check --examples --features=eh1,smartled,ufmt
+        run: cd esp32c3-hal/ && cargo check --examples --features=eh1,ufmt
       - name: check esp32c3-hal (async, systick)
         run: cd esp32c3-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-systick
       - name: check esp32c3-hal (async, timg0)
@@ -140,7 +140,7 @@ jobs:
       # Subsequent steps can just check the examples instead, as we're already
       # confident that they link.
       - name: check esp32c6-hal (common features)
-        run: cd esp32c6-hal/ && cargo check --examples --features=eh1,smartled,ufmt
+        run: cd esp32c6-hal/ && cargo check --examples --features=eh1,ufmt
       - name: check esp32c6-hal (async, systick)
         run: cd esp32c6-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-systick
       - name: check esp32c6-hal (async, timg0)
@@ -169,7 +169,7 @@ jobs:
       # Subsequent steps can just check the examples instead, as we're already
       # confident that they link.
       - name: check esp32s2-hal (common features)
-        run: cd esp32s2-hal/ && cargo check --examples --features=eh1,smartled,ufmt
+        run: cd esp32s2-hal/ && cargo check --examples --features=eh1,ufmt
       # FIXME: `time-systick` feature disabled for now, see 'esp32s2-hal/Cargo.toml'.
       # - name: check esp32s2-hal (async, systick)
       #   run: cd esp32s2-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-systick
@@ -203,7 +203,7 @@ jobs:
       # Subsequent steps can just check the examples instead, as we're already
       # confident that they link.
       - name: check esp32s3-hal (common features)
-        run: cd esp32s3-hal/ && cargo check --examples --features=eh1,smartled,ufmt
+        run: cd esp32s3-hal/ && cargo check --examples --features=eh1,ufmt
       - name: check esp32s3-hal (async, systick)
         run: cd esp32s3-hal/ && cargo check --example=embassy_hello_world --features=embassy,embassy-time-systick
       - name: check esp32s3-hal (async, timg0)
@@ -230,9 +230,9 @@ jobs:
       - name: msrv (esp32c2-hal)
         run: cd esp32c2-hal/ && cargo check --features=eh1,ufmt
       - name: msrv (esp32c3-hal)
-        run: cd esp32c3-hal/ && cargo check --features=eh1,ufmt,smartled
+        run: cd esp32c3-hal/ && cargo check --features=eh1,ufmt
       - name: msrv (esp32c6-hal)
-        run: cd esp32c6-hal/ && cargo check --features=eh1,ufmt,smartled
+        run: cd esp32c6-hal/ && cargo check --features=eh1,ufmt
 
   msrv-xtensa:
     runs-on: ubuntu-latest
@@ -247,11 +247,11 @@ jobs:
 
       # Verify the MSRV for all Xtensa chips.
       - name: msrv (esp32-hal)
-        run: cd esp32-hal/ && cargo check --features=eh1,ufmt,smartled
+        run: cd esp32-hal/ && cargo check --features=eh1,ufmt
       - name: msrv (esp32s2-hal)
-        run: cd esp32s2-hal/ && cargo check --features=eh1,ufmt,smartled
+        run: cd esp32s2-hal/ && cargo check --features=eh1,ufmt
       - name: msrv (esp32s3-hal)
-        run: cd esp32s3-hal/ && cargo check --features=eh1,ufmt,smartled
+        run: cd esp32s3-hal/ && cargo check --features=eh1,ufmt
 
   # --------------------------------------------------------------------------
   # Lint
