--- a/esp-hal-common/Cargo.toml
+++ b/esp-hal-common/Cargo.toml
@@ -36,7 +36,7 @@ embassy-time       = { version = "0.1.0", features = ["nightly"], optional = tru
 embassy-futures    = { version = "0.1.0", optional = true }
 
 # RISC-V
-esp-riscv-rt                = { version = "0.1.0", optional = true }
+esp-riscv-rt                = { version = "0.2.0", optional = true }
 riscv-atomic-emulation-trap = { version = "0.4.0", optional = true }
 
 # Xtensa
@@ -87,5 +87,10 @@ embassy-time-systick = []
 embassy-time-timg0   = []
 
 # Architecture-specific features (intended for internal use)
-riscv  = ["critical-section/restore-state-u8",  "procmacros/riscv", "esp-riscv-rt", "riscv-atomic-emulation-trap"]
+riscv  = ["critical-section/restore-state-u8",  "procmacros/riscv", "esp-riscv-rt", "riscv-atomic-emulation-trap", "esp-riscv-rt/zero-bss"]
 xtensa = ["critical-section/restore-state-u32", "procmacros/xtensa"]
+
+# Initialize / clear data sections and RTC memory
+rv-init-data     = ["esp-riscv-rt/init-data", "esp-riscv-rt/init-rw-text"]
+rv-zero-rtc-bss  = ["esp-riscv-rt/zero-rtc-fast-bss"]
+rv-init-rtc-data = ["esp-riscv-rt/init-rtc-fast-data", "esp-riscv-rt/init-rtc-fast-text"]
