--- a/esp32c2-hal/Cargo.toml
+++ b/esp32c2-hal/Cargo.toml
@@ -31,7 +31,6 @@ embedded-hal-1     = { version = "=1.0.0-alpha.9", optional = true, package = "e
 embedded-hal-async = { version = "0.2.0-alpha.0", optional = true }
 embedded-hal-nb    = { version = "=1.0.0-alpha.1", optional = true }
 esp-hal-common     = { version = "0.7.0",  features = ["esp32c2"], path = "../esp-hal-common" }
-r0                 = "1.0.0"
 
 [dev-dependencies]
 critical-section  = "1.1.1"
@@ -45,7 +44,7 @@ static_cell       = "1.0.0"
 
 [features]
 default              = ["rt", "vectored", "xtal40mhz"]
-direct-boot          = []
+direct-boot          = ["esp-hal-common/rv-init-data"]
 eh1                  = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb"]
 rt                   = []
 ufmt                 = ["esp-hal-common/ufmt"]
