--- a/esp32c6-hal/Cargo.toml
+++ b/esp32c6-hal/Cargo.toml
@@ -34,7 +34,6 @@ embedded-hal-async = { version = "0.2.0-alpha.0", optional = true }
 embedded-hal-nb    = { version = "=1.0.0-alpha.1", optional = true }
 embedded-can       = { version = "0.4.1", optional = true }
 esp-hal-common     = { version = "0.7.0",  features = ["esp32c6"], path = "../esp-hal-common" }
-r0                 = "1.0.0"
 
 [dev-dependencies]
 aes               = "0.8.2"
@@ -50,8 +49,8 @@ ssd1306           = "0.7.1"
 static_cell       = "1.0.0"
 
 [features]
-default              = ["rt", "vectored"]
-direct-boot          = []
+default              = ["rt", "vectored", "esp-hal-common/rv-zero-rtc-bss"]
+direct-boot          = ["esp-hal-common/rv-init-data", "esp-hal-common/rv-init-rtc-data"]
 eh1                  = ["esp-hal-common/eh1", "dep:embedded-hal-1", "dep:embedded-hal-nb", "dep:embedded-can"]
 rt                   = []
 ufmt                 = ["esp-hal-common/ufmt"]
