Add support for radio peripheral clock control

--- a/esp-hal-common/devices/esp32.toml
+++ b/esp-hal-common/devices/esp32.toml
@@ -53,6 +53,9 @@ peripherals = [
     "dac",
     "pdma",
     "radio",
+    "phy",
+    "bt",
+    "wifi",
 
     # Wakeup SOC based on ESP-IDF:
     "pm_support_ext0_wakeup",
