--- a/esp-hal-common/devices/esp32c3.toml
+++ b/esp-hal-common/devices/esp32c3.toml
@@ -45,6 +45,9 @@ peripherals = [
     "adc",
     "gdma",
     "radio",
+    "phy",
+    "bt",
+    "wifi",
 
     # Wakeup SOC based on ESP-IDF:
     "pm_support_wifi_wakeup",
