--- a/esp-hal-common/devices/esp32s2.toml
+++ b/esp-hal-common/devices/esp32s2.toml
@@ -51,6 +51,8 @@ peripherals = [
     "dac",
     "pdma",
     "radio",
+    "phy",
+    "wifi",
 
     # Wakeup SOC based on ESP-IDF:
     "pm_support_ext0_wakeup",
