--- a/esp-hal-common/devices/esp32s3.toml
+++ b/esp-hal-common/devices/esp32s3.toml
@@ -61,6 +61,9 @@ peripherals = [
     "adc",
     "gdma",
     "radio",
+    "phy",
+    "bt",
+    "wifi",
 
     # Wakeup SOC based on ESP-IDF:
     "pm_support_ext0_wakeup",
