--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -208,8 +208,8 @@ jobs:
       # for each supported image format.
       - name: build esp32h2-hal (no features)
         run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 build --examples
-      - name: build esp32h2-hal (direct-boot)
-        run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 build --examples --features=direct-boot
+      # - name: build esp32h2-hal (direct-boot)
+      #   run: cd esp32h2-hal/ && cargo +nightly-2023-03-09 build --examples --features=direct-boot
       # Subsequent steps can just check the examples instead, as we're already
       # confident that they link.
       - name: check esp32h2-hal (common features)
