--- a/esp32-hal/Cargo.toml
+++ b/esp32-hal/Cargo.toml
@@ -42,6 +42,7 @@ esp-alloc         = "0.3.0"
 esp-backtrace     = { version = "0.7.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled  = { version = "0.2.0", features = ["esp32"], path = "../esp-hal-smartled" }
 esp-println       = { version = "0.5.0", features = ["esp32", "log"] }
+lis3dh-async      = "0.7.0"
 sha2              = { version = "0.10.6", default-features = false}
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
@@ -91,4 +92,8 @@ required-features = ["psram_2m"]
 
 [[example]]
 name              = "embassy_serial"
+required-features = ["embassy", "async"]
+
+[[example]]
+name              = "embassy_i2c"
 required-features = ["embassy", "async"]
