--- a/esp32c6-hal/Cargo.toml
+++ b/esp32c6-hal/Cargo.toml
@@ -44,6 +44,7 @@ embedded-graphics = "0.7.1"
 esp-backtrace     = { version = "0.7.0", features = ["esp32c6", "panic-handler", "exception-handler", "print-uart"] }
 esp-hal-smartled  = { version = "0.2.0", features = ["esp32c6"], path = "../esp-hal-smartled" }
 esp-println       = { version = "0.5.0", features = ["esp32c6"] }
+lis3dh-async      = "0.7.0"
 sha2              = { version = "0.10.6", default-features = false}
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
@@ -88,4 +89,8 @@ required-features = ["interrupt-preemption"]
 
 [[example]]
 name              = "embassy_serial"
+required-features = ["embassy", "async"]
+
+[[example]]
+name              = "embassy_i2c"
 required-features = ["embassy", "async"]
