--- a/esp32s2-hal/Cargo.toml
+++ b/esp32s2-hal/Cargo.toml
@@ -43,6 +43,7 @@ esp-alloc         = "0.3.0"
 esp-backtrace     = { version = "0.7.0", features = ["esp32s2", "panic-handler", "print-uart", "exception-handler"] }
 esp-hal-smartled  = { version = "0.2.0", features = ["esp32s2"], path = "../esp-hal-smartled" }
 esp-println       = { version = "0.5.0", features = ["esp32s2"] }
+lis3dh-async      = "0.7.0"
 sha2              = { version = "0.10.6", default-features = false}
 smart-leds        = "0.3.0"
 ssd1306           = "0.7.1"
@@ -97,5 +98,6 @@ required-features = ["psram_2m"]
 name              = "embassy_serial"
 required-features = ["embassy", "async"]
 
-[profile.release]
-debug = true
+[[example]]
+name              = "embassy_i2c"
+required-features = ["embassy", "async"]
