feat(riscv): move __EXTERNAL_INTERRUPTS to sram
Previously, as RODATA this was getting placed in flash, so this lookup
via `interrupt::riscv::vectored::handle_interrupt`:

```rust
let handler = peripherals::__EXTERNAL_INTERRUPTS[interrupt as usize]._handler;
```

was compiling to:

```
40380f1e:       3c006537                lui     a0,0x3c006
40380f22:       63c50c93                addi    s9,a0,1596 # 3c00663c <__EXTERNAL_INTERRUPTS>
...
40381112:       9566                    add     a0,a0,s9
40381114:       410c                    lw      a1,0(a0)
```

which dereferences a pointer into the flash segment `0x3c0...`.

After this change to apply the linker directive from the corresponding
[commit to the pac crate][pac-commit]
o   Num:    Value  Size Type    Bind   Vis      Ndx Name
 48188: 3fc80608   248 OBJECT  GLOBAL DEFAULT    9 __EXTERNAL_INTERRUPTS

```
   Num:    Value  Size Type    Bind   Vis      Ndx Name
 48188: 3fc80608   248 OBJECT  GLOBAL DEFAULT    9 __EXTERNAL_INTERRUPTS
```

As seen by `readelf -W -s -C ./esp32c3-hal/target/riscv32imc-unknown-none-elf/debug/examples/gpio_interrupt | grep -E __EXT\|Ndx`.

[pac-commit]: https://github.com/rustbox/esp-pacs/commit/c8e7cbb1cef4f6b3fd565c8fbb30e37674657877

--- a/esp32c3-hal/Cargo.toml
+++ b/esp32c3-hal/Cargo.toml
@@ -101,3 +101,6 @@ required-features = ["embassy", "async"]
 [[example]]
 name              = "embassy_i2c"
 required-features = ["embassy", "async"]
+
+[patch.crates-io]
+esp32c3 = { git = "https://github.com/rustbox/esp-pacs", rev = "c8e7cbb1cef4f6b3fd565c8fbb30e37674657877" }
